--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "@ng-bootstrap/ng-bootstrap": "^16.0.0-rc.2",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.5.0",
